@@ -28,30 +28,31 @@ class One2One(Many2Many):
             res[i] = vals[0] if vals else False
         return res
 
-    def set(self, ids, model, name, value):
+    def set(self, Model, name, ids, value, *args):
         '''
         Set the values.
-
-        :param ids: A list of ids
-        :param model: A string with the name of the model
-        :param name: A string with the name of the field
-        :param value: The id to link
         '''
         pool = Pool()
         Relation = pool.get(self.relation_name)
-        relations = Relation.search([
-                (self.origin, 'in', ids),
-                ])
-        Relation.delete(relations)
-        if value:
-            to_create = []
-            for record_id in ids:
-                to_create.append({
-                        self.origin: record_id,
-                        self.target: value,
-                        })
-            if to_create:
-                Relation.create(to_create)
+        to_delete = []
+        to_create = []
+        args = iter((ids, value) + args)
+        for ids, value in zip(args, args):
+            relations = Relation.search([
+                    (self.origin, 'in', ids),
+                    ])
+            to_delete.extend(relations)
+            if value:
+                to_create = []
+                for record_id in ids:
+                    to_create.append({
+                            self.origin: record_id,
+                            self.target: value,
+                            })
+        if to_delete:
+            Relation.delete(to_delete)
+        if to_create:
+            Relation.create(to_create)
 
     def __set__(self, inst, value):
         Target = self.get_target()
